--- a/web/style.css
+++ b/web/style.css
@@ -35,6 +35,7 @@ body {
 }
 
 #health {
+    width: 100%;
     height: 100%;
     border-radius: 2px;
     background-color: rgb(33, 171, 97);
@@ -42,6 +43,7 @@ body {
 }
 
 #armour {
+    width: 100%;
     height: 100%;
     border-radius: 2px;
     background-color: rgb(45, 82, 134);
@@ -50,22 +52,25 @@ body {
 }
 
 #thirst {
-    transform: rotate(180deg);
+    width: 100%;
     height: 100%;
     border-radius: 2px;
     background-color: rgb(26, 124, 173);
+    transform: rotate(180deg);
     transition: width 1.0s ease;
 }
 
 #hunger {
-    transform: rotate(180deg);
+    width: 100%;
     height: 100%;
     border-radius: 2px;
     background-color: rgb(221, 110, 20);
+    transform: rotate(180deg);
     transition: width 1.0s ease;
 }
 
 #stamina {
+    width: 100%;
     height: 100%;
     border-radius: 2px;
     background-color: rgb(116, 116, 116);
@@ -73,6 +78,7 @@ body {
 }
 
 #oxygen {
+    width: 100%;
     height: 100%;
     border-radius: 2px;
     background-color: rgb(138, 168, 189);
@@ -80,6 +86,7 @@ body {
 }
 
 #stress {
+    width: 100%;
     height: 100%;
     border-radius: 2px;
     background-color: rgb(255, 0, 0);
